welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: Boolean does not take parameters
  else (n>=3) {gauche()}
              ^